[package]
name = "mun-relay"
version = "0.1.0"
authors = ["aemino <aeminodev@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
ron = "0.6.4"
serde = { version = "1.0.118", features = ["derive"] }
serenity = { version = "0.10.0", features = ["collector"] }
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
